<resources>
    <string name="app_name">e-ORL</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_menu"></string>
    <string name="title_activity_sing_up">SingUpActivity</string>
    <string name="str_name">Nome</string>
    <string name="str_email">E-mail</string>
    <string name="str_confirm_email">Confirmar E-mail</string>
    <string name="str_senha">Senha</string>
    <string name="str_confirm_senha">Confirmar Senha</string>
    <string name="str_nova_senha">Nova Senha</string>
    <string name="str_confirm_nova_senha">Confirmar Nova Senha</string>
    <string name="str_data_nascimento">Data de Nascimento</string>
    <string name="str_sing_senha">Cadastro</string>
    <string name="str_cadastrar">Cadastrar</string>
    <string name="str_confirmar_alteracao">Confirmar Alteração</string>
    <string name="title_activity_reset">ResetActivity</string>
    <string name="facebook_app_id">1817832555107379</string>
    <string name="title_activity_activity_menu">activity_menu</string>
    <string name="action_logout">Sair</string>

    <string name="str_treatment">Tratamento</string>
    <string name="str_dif_diag">Diagnóstico Diferencial</string>
    <string name="str_main_diag">Principal</string>

    <string name="str_clinical_case">QUADRO CLÍNICO</string>
    <string name="str_exam">EXAME FÍSICO</string>
    <string name="str_attention">ATENÇÃO!</string>

    <string name="str_antibiotic">PRECISA DE ANTIBIÓTICO?</string>
    <string name="str_allergy">EM CASO DE ALERGIA</string>
    <string name="str_med_assoc">MEDICAÇÕES ASSOCIADAS</string>
    <string name="str_diag_diff">DIAGNÓSTICO DIFERENCIAL</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_update_password"></string>
    <string name="title_activity_update"></string>
    <string name="title_activity_note">Notas</string>
    <string name="title_activity_note_add"></string>
    <string name="title_activity_diagnosis">Diagnósticos</string>
    <string name="title_activity_diagnosis_content">DiagnosisContentActivity</string>
    <string name="title_activity_message">Nova Mensagem</string>
    <string name="title_activity_calculator_weight">Selecione um peso</string>
    <string name="title_activity_calculator_drug">Selecione um medicamento</string>
    <string name="title_activity_main">Conversor de Corticóide</string>
    <string name="title_activity_calculator_menu">Selecione uma Calculadora</string>
    <string name="str_edit_text_letters">abcdefghijklmnopqrstuvxyzç</string>
    <string name="title_activity_drug_list">Bulário</string>
    <string name="title_activity_drug_content">DrugContent</string>

    <string name="str_name_med">MEDICAMENTO</string>
    <string name="str_presentation">APRESENTAÇÕES</string>
    <string name="str_age">PODE SER USADO A PARTIR DE QUE IDADE?</string>
    <string name="str_contradiction">CONTRAINDICAÇÕES</string>
    <string name="str_dosage">POSOLOGIA</string>
    <string name="str_pregnancy">É SEGURO NA GRAVIDEZ?</string>
    <string name="str_lactation">É SEGURO NA LACTAÇÃO?</string>
    <string name="str_drugs_interactions">INTERAÇÕES MEDICAMENTOSAS</string>
    <string name="str_reactions">PRINCIPAIS REAÇÕES ADVERSAS</string>
    <string name="str_failure">AJUSTE DE DOSE NA INSUFICIENCIA RENAL</string>
    <string name="str_important_information">INFORMAÇÕES IMPORTANTES</string>

</resources>
