<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.luizh.projeto_eorl.DrugContent"
    tools:showIn="@layout/activity_drug_content">

    <ScrollView
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="10dp">

                <android.support.v7.widget.AppCompatTextView style="@style/DividerMainDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/str_presentation" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="conteudo 2"
                    android:id="@+id/tv_presentation"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="10dp">

                <android.support.v7.widget.AppCompatTextView style="@style/DividerMainDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/str_age" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="conteudo 3"
                    android:id="@+id/tv_age"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="10dp">

                <android.support.v7.widget.AppCompatTextView style="@style/DividerMainDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/str_contradiction" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="conteudo 3"
                    android:id="@+id/tv_contradiction"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="10dp">

                <android.support.v7.widget.AppCompatTextView style="@style/DividerMainDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/str_dosage" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="conteudo 3"
                    android:id="@+id/tv_dosage"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="10dp">

                <android.support.v7.widget.AppCompatTextView style="@style/DividerMainDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/str_pregnancy" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="conteudo 3"
                    android:id="@+id/tv_pregnancy"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="10dp">

                <android.support.v7.widget.AppCompatTextView style="@style/DividerMainDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/str_lactation" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="conteudo 3"
                    android:id="@+id/tv_lactation"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="10dp">

                <android.support.v7.widget.AppCompatTextView style="@style/DividerMainDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/str_drugs_interactions" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="conteudo 3"
                    android:id="@+id/tv_drugs_interactions"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="10dp">

                <android.support.v7.widget.AppCompatTextView style="@style/DividerMainDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/str_reactions" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="conteudo 3"
                    android:id="@+id/tv_reactions"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="10dp">

                <android.support.v7.widget.AppCompatTextView style="@style/DividerMainDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/str_failure" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="conteudo 3"
                    android:id="@+id/tv_failure"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="10dp">

                <android.support.v7.widget.AppCompatTextView style="@style/DividerMainDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/str_important_information" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="conteudo 3"
                    android:id="@+id/tv_important_information"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
