<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="110dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <ScrollView
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="10dp">

                <android.support.v7.widget.AppCompatTextView style="@style/DividerMainDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/str_clinical_case"
                    />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="conteudo"
                    android:id="@+id/tv_clinical_case"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="10dp">

                <android.support.v7.widget.AppCompatTextView style="@style/DividerMainDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/str_exam" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="conteudo 2"
                    android:id="@+id/tv_exam"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingBottom="10dp">

                <android.support.v7.widget.AppCompatTextView style="@style/DividerMainDiagnosis"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/str_attention" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="conteudo 3"
                    android:id="@+id/tv_attention"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>